crates/test-files/fixtures/compile_errors/shadow_builtin_function.fe
contract C {
    pub fn keccak256(bytes: Array<u8, 4>) -> Array<u8, 4> {
        return [1, 2, 3, 4]
    }

    pub fn u256(x: u8) -> u256 {
        return 10
    }

    pub fn bool(x: u8) -> bool {
        return x != 0
    }
}
